--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
+
 <body>
-    this is an html page
+
+    <div class="hero">
+
+        <header>
+            <div class="logo">
+                <img src="../public/imgs/Logo.svg" alt="">
+            </div>
+            <ul class="links">
+
+                <li class="current-link">Home</li>
+                <li>Discover</li>
+                <li>Movies Release</li>
+                <li>Forum</li>
+                <li>About</li>
+
+            </ul>
+            <div class="buttons">
+                <img src="./public/imgs/search.svg" alt="">
+                <a class="register">Sign Up</a>
+                <a class="login">Login</a>
+            </div>
+        </header>
+
+        <div class="infos-movie">
+            <div class="details">
+                <div class="genre">Movie</div>
+                <div class="info-card">
+                    <div class="title">Star Wars: The force Awaken</div>
+                    <div class="details">2h40m • 2022 • Fantasy • Actions</div>
+                    <div class="desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, eligendi.Lorem,
+                        ipsum dolor sit amet consectetur adipisicing elit. Unde, eligendi.</div>
+                </div>
+                <div class="cta">
+                    <div class="play-movie">
+                        <img src="./public/imgs/play.svg" alt="">
+                        <a href="">Watch Trailer</a>
+                    </div>
+                    <div class="add-watchlist">
+                        <img src="./public/imgs/bookmark.svg" alt="">
+                        <a href="">Add Watchlist</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
