--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="../public/css/style2.css">
 </head>
 
 <body>
@@ -55,6 +56,41 @@
         </div>
     </div>
 
+    <div class="featured-container" id="featured-container">
+        <img id="movie-image" src="" alt="" />
+        <div class="overlay"></div>
+        <div class="featured-content">
+          <div class="featured-content-title">
+            <h1 id="movie-title">Featured in SaintStream</h1>
+            <h3>Best featured for you today</h3>
+          </div>
+          <div class="movie-details">
+            <div class="rating" id="rating">⭐</div>
+            <div id="date">2023 |</div>
+            <div id="genre"></div>
+          </div>
+          <p id="movie-details" class="movie-describ"></p>
+          <div class="featured-btns">
+            <button class="main-btn">
+              <span class="material-symbols-outlined"> play_circle </span>watch
+              later
+            </button>
+            <button class="second-btn">
+              <span class="material-symbols-outlined"> bookmark </span> Add
+              watchlist
+            </button>
+          </div>
+        </div>
+  
+        <div id="swiperContainer" class="swiper mySwiper featured-carousel">
+          <div class="swiper-wrapper"></div>
+          <div class="swiper-btn swiper-button-next"></div>
+          <div class="swiper-btn swiper-button-prev"></div>
+        </div>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+      <script src="../public/js/swiper.js"></script>
+      <script src="../public/js/main.js"></script>
 
 </body>
 
