--- a/public/index.html
+++ b/public/index.html
@@ -2,96 +2,114 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../public/css/style.css">
-    <link rel="stylesheet" href="../public/css/style2.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="../public/css/style.css">
+  <link rel="stylesheet" href="../public/css/style2.css">
 </head>
 
 <body>
+  <h1>Fetch API Example</h1>
+  <button id="fetchButton">Fetch Data</button>
+  <div id="output"></div>
+  <div class="hero">
 
-    <div class="hero">
+    <header>
+      <div class="logo">
+        <img src="../public/imgs/Logo.svg" alt="">
+      </div>
+      <ul class="links">
 
-        <header>
-            <div class="logo">
-                <img src="../public/imgs/Logo.svg" alt="">
-            </div>
-            <ul class="links">
+        <li class="current-link">Home</li>
+        <li>Discover</li>
+        <li>Movies Release</li>
+        <li>Forum</li>
+        <li>About</li>
 
-                <li class="current-link">Home</li>
-                <li>Discover</li>
-                <li>Movies Release</li>
-                <li>Forum</li>
-                <li>About</li>
+      </ul>
+      <div class="buttons">
+        <img src="./public/imgs/search.svg" alt="">
+        <a class="register">Sign Up</a>
+        <a class="login">Login</a>
+      </div>
+    </header>
 
-            </ul>
-            <div class="buttons">
-                <img src="./public/imgs/search.svg" alt="">
-                <a class="register">Sign Up</a>
-                <a class="login">Login</a>
-            </div>
-        </header>
-
-        <div class="infos-movie">
-            <div class="details">
-                <div class="genre">Movie</div>
-                <div class="info-card">
-                    <div class="title">Star Wars: The force Awaken</div>
-                    <div class="details">2h40m • 2022 • Fantasy • Actions</div>
-                    <div class="desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, eligendi.Lorem,
-                        ipsum dolor sit amet consectetur adipisicing elit. Unde, eligendi.</div>
-                </div>
-                <div class="cta">
-                    <div class="play-movie">
-                        <img src="./public/imgs/play.svg" alt="">
-                        <a href="">Watch Trailer</a>
-                    </div>
-                    <div class="add-watchlist">
-                        <img src="./public/imgs/bookmark.svg" alt="">
-                        <a href="">Add Watchlist</a>
-                    </div>
-                </div>
-            </div>
+    <div class="infos-movie">
+      <div class="details">
+        <div class="genre">Movie</div>
+        <div class="info-card">
+          <div class="title">Star Wars: The force Awaken</div>
+          <div class="details">2h40m • 2022 • Fantasy • Actions</div>
+          <div class="desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, eligendi.Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Unde, eligendi.</div>
         </div>
-    </div>
-
-    <div class="featured-container" id="featured-container">
-        <img id="movie-image" src="" alt="" />
-        <div class="overlay"></div>
-        <div class="featured-content">
-          <div class="featured-content-title">
-            <h1 id="movie-title">Featured in SaintStream</h1>
-            <h3>Best featured for you today</h3>
+        <div class="cta">
+          <div class="play-movie">
+            <img src="./public/imgs/play.svg" alt="">
+            <a href="">Watch Trailer</a>
           </div>
-          <div class="movie-details">
-            <div class="rating" id="rating">⭐</div>
-            <div id="date">2023 |</div>
-            <div id="genre"></div>
+          <div class="add-watchlist">
+            <img src="./public/imgs/bookmark.svg" alt="">
+            <a href="">Add Watchlist</a>
           </div>
-          <p id="movie-details" class="movie-describ"></p>
-          <div class="featured-btns">
-            <button class="main-btn">
-              <span class="material-symbols-outlined"> play_circle </span>watch
-              later
-            </button>
-            <button class="second-btn">
-              <span class="material-symbols-outlined"> bookmark </span> Add
-              watchlist
-            </button>
-          </div>
-        </div>
-  
-        <div id="swiperContainer" class="swiper mySwiper featured-carousel">
-          <div class="swiper-wrapper"></div>
-          <div class="swiper-btn swiper-button-next"></div>
-          <div class="swiper-btn swiper-button-prev"></div>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-      <script src="../public/js/swiper.js"></script>
-      <script src="../public/js/main.js"></script>
+    </div>
+  </div>
 
+  <div class="featured-container" id="featured-container">
+    <img id="movie-image" src="" alt="" />
+    <div class="overlay"></div>
+    <div class="featured-content">
+      <div class="featured-content-title">
+        <h1 id="movie-title">Featured in SaintStream</h1>
+        <h3>Best featured for you today</h3>
+      </div>
+      <div class="movie-details">
+        <div class="rating" id="rating">⭐</div>
+        <div id="date">2023 |</div>
+        <div id="genre"></div>
+      </div>
+      <p id="movie-details" class="movie-describ"></p>
+      <div class="featured-btns">
+        <button class="main-btn">
+          <span class="material-symbols-outlined"> play_circle </span>watch
+          later
+        </button>
+        <button class="second-btn">
+          <span class="material-symbols-outlined"> bookmark </span> Add
+          watchlist
+        </button>
+      </div>
+    </div>
+
+    <div id="swiperContainer" class="swiper mySwiper featured-carousel">
+      <div class="swiper-wrapper"></div>
+      <div class="swiper-btn swiper-button-next"></div>
+      <div class="swiper-btn swiper-button-prev"></div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <script src="../public/js/swiper.js"></script>
+  <script src="../public/js/main.js"></script>
+  <script>
+    document.getElementById('fetchButton').addEventListener('click', fetchData);
+
+    function fetchData() {
+      fetch('/api/movies/search?query=%22glide%22')
+        .then(response => response.json())
+        .then(data => {
+          document.getElementById('output').innerHTML = `
+                        <h2>${data[0].title}</h2>
+                        <p>${datap[0].id}</p>
+                    `;
+        })
+        .catch(error => {
+          console.error('Error fetching data:', error);
+        });
+    }
+  </script>
 </body>
 
 </html>
