Add Hero section & Show movie page

--- a/public/movie.html
+++ b/public/movie.html
@@ -1,11 +1,300 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
+
 <body>
-    this is movie page
+
+    <div class="hero1">
+
+        <header>
+            <div class="logo">
+                <img src="../public/images/Logo.svg" alt="">
+            </div>
+            <ul class="links">
+
+                <li class="current-link">Home</li>
+                <li>Discover</li>
+                <li>Movies Release</li>
+                <li>Forum</li>
+                <li>About</li>
+
+            </ul>
+            <div class="buttons">
+                <img src="../public/images/search.svg" alt="">
+                <img src="../public/images/bell.svg" alt="">
+                <div class="account">
+                    <img class="img-account" src="../public/images/carcatere-profile.png" alt="">
+                    <img src="../public/images/Arrow-down.svg" alt="">
+                </div>
+            </div>
+        </header>
+
+        <div class="infos-movie">
+            <div class="details">
+                <div class="genre">Movie</div>
+                <div class="info-card">
+                    <div class="title">The Last Of Us Season 1</div>
+                    <div class="details">9 Episodes • 2022 • Fantasy • Actions</div>
+                </div>
+                <div class="cta">
+                    <div class="play-movie">
+                        <img src="../public/images/play.svg" alt="">
+                        <a href="">Continue Watching</a>
+                    </div>
+                    <div class="add-watchlist">
+                        <img src="../public/images/bookmark.svg" alt="">
+                        <a class="link-watchlist" href="">Add Watchlist</a>
+                    </div>
+                </div>
+            </div>
+            <div class="cta">
+                <div class="download">
+                    <img src="../public/images/download.svg" alt="">
+                    <a class="link-download" href="">Download</a>
+                </div>
+                <div class="share">
+                    <img src="../public/images/share.svg" alt="">
+                    <a class="link-share" href="">Share</a>
+                </div>
+                <div class="like">
+                    <img src="../public/images/thumb-up.svg" alt="">
+                    <a class="link-like" href="">Like</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="movie-information">
+        <div class="story-line">
+            <h4>Story Line</h4>
+            <p>The Last of Us is an American post-apocalyptic drama television series created by Craig Mazin and Neil
+                Druckmann for HBO. Based on the 2013 video game developed by Naughty Dog, the series is set in 2023,
+                twenty years into a pandemic caused by a mass fungal infection, which causes its hosts to transform into
+                zombie-like creatures and collapses society. The series follows Joel (Pedro Pascal), a smuggler tasked
+                with escorting the immune teenager Ellie (Bella Ramsey) across a post-apocalyptic United States</p>
+        </div>
+        <div class="top-cast">
+            <h4>Top Cast</h4>
+            <div class="streamlist">
+                <div class="stream-brand">
+                    <div class="cast">
+                        <img src="../public/images/cast1.png" alt="" srcset="">
+                        <div class="name-job">
+                            <h4>Pedro Pascal</h4>
+                            <h6>Joel Miller</h6>
+                        </div>
+                    </div>
+                    <div class="cast">
+                        <img src="../public/images/cast1.png" alt="" srcset="">
+                        <div class="name-job">
+                            <h4>Pedro Pascal</h4>
+                            <h6>Joel Miller</h6>
+                        </div>
+                    </div>
+                    <div class="cast">
+                        <img src="../public/images/cast1.png" alt="" srcset="">
+                        <div class="name-job">
+                            <h4>Pedro Pascal</h4>
+                            <h6>Joel Miller</h6>
+                        </div>
+                    </div>
+                    <div class="cast">
+                        <img src="../public/images/cast1.png" alt="" srcset="">
+                        <div class="name-job">
+                            <h4>Pedro Pascal</h4>
+                            <h6>Joel Miller</h6>
+                        </div>
+                    </div>
+                    <div class="cast">
+                        <img src="../public/images/cast1.png" alt="" srcset="">
+                        <div class="name-job">
+                            <h4>Pedro Pascal</h4>
+                            <h6>Joel Miller</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="episodes">
+        <div class="header">
+            <h4>Episode</h4>
+        </div>
+        <div class="streamlist">
+            <div class="box-episode">
+                <div class="episode">
+                    <div class="info">
+                        <div class="title-desc">
+                            <div class="title">
+                                <h4>Episode 1</h4>
+                                <p>The chapter about geuinea just want to go out fromhis palace</p>
+                            </div>
+                        </div>
+                        <img src="../public/images/vid1.png" alt="">
+                    </div>
+                </div>
+                <div class="episode">
+                    <div class="info">
+                        <div class="title-desc">
+                            <div class="title">
+                                <h4>Episode 1</h4>
+                                <p>The chapter about geuinea just want to go out fromhis palace</p>
+                            </div>
+                        </div>
+                        <img src="../public/images/vid1.png" alt="">
+                    </div>
+                </div>
+                <div class="episode">
+                    <div class="info">
+                        <div class="title-desc">
+                            <div class="title">
+                                <h4>Episode 1</h4>
+                                <p>The chapter about geuinea just want to go out fromhis palace</p>
+                            </div>
+                        </div>
+                        <img src="../public/images/vid1.png" alt="">
+                    </div>
+                </div>
+                <div class="episode">
+                    <div class="info">
+                        <div class="title-desc">
+                            <div class="title">
+                                <h4>Episode 1</h4>
+                                <p>The chapter about geuinea just want to go out fromhis palace</p>
+                            </div>
+                        </div>
+                        <img src="../public/images/vid1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+    <div class="similar-movies">
+        <div class="header">
+            <h4>Similar Movies for you</h4>
+        </div>
+        <div class="streamlist">
+            <div class="box-similar-movies">
+                <div class="similar-movie">
+                    <img class="img-movie" src="../public/images/similar-movie.png" alt="">
+                    <div class="title-desc">
+                        <h4>TOP GUN:Maverick</h4>
+                        <div class="rating-genre">
+                            <div class="rating">
+                                <img src="../public/images/star.svg" alt="">
+                                <h4>4.6</h4>
+                            </div>
+                            <div class="genre">
+                                <h4>| Action • Movie</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="similar-movie">
+                    <img class="img-movie" src="../public/images/similar-movie.png" alt="">
+                    <div class="title-desc">
+                        <h4>TOP GUN:Maverick</h4>
+                        <div class="rating-genre">
+                            <div class="rating">
+                                <img src="../public/images/star.svg" alt="">
+                                <h4>4.6</h4>
+                            </div>
+                            <div class="genre">
+                                <h4>| Action • Movie</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="similar-movie">
+                    <img class="img-movie" src="../public/images/similar-movie.png" alt="">
+                    <div class="title-desc">
+                        <h4>TOP GUN:Maverick</h4>
+                        <div class="rating-genre">
+                            <div class="rating">
+                                <img src="../public/images/star.svg" alt="">
+                                <h4>4.6</h4>
+                            </div>
+                            <div class="genre">
+                                <h4>| Action • Movie</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="similar-movie">
+                    <img class="img-movie" src="../public/images/similar-movie.png" alt="">
+                    <div class="title-desc">
+                        <h4>TOP GUN:Maverick</h4>
+                        <div class="rating-genre">
+                            <div class="rating">
+                                <img src="../public/images/star.svg" alt="">
+                                <h4>4.6</h4>
+                            </div>
+                            <div class="genre">
+                                <h4>| Action • Movie</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="first-col">
+            <div class="desc">
+                <h2>Our platform is trusted by millions & features best updated movies all around the world.</h2>
+            </div>
+            <div class="ohter">
+                <div class="links">
+                    <a href="">Home /</a>
+                    <a href="">Discover /</a>
+                    <a href="">Influence /</a>
+                    <a href="">Release</a>
+                </div>
+
+                <div class="icons">
+                    <a href="">
+
+                        <img src="../public/images/Instagram.svg" alt="">
+                    </a>
+                    <a href="">
+
+                        <img src="../public/images/Facebook.svg" alt="">
+                    </a>
+                    <a href="">
+
+                        <img src="../public/images/Twitter.svg" alt="">
+                    </a>
+                    <a href="">
+
+                        <img src="../public/images/Google.svg" alt="">
+                    </a>
+                </div>
+
+            </div>
+        </div>
+        <div class="second-col">
+            <div class="info">
+                <div class="links">
+                    <a href="">Privacy policy</a>
+                    <a href="">Term of service</a>
+                    <a href="">Language</a>
+                </div>
+                <div class="copyright">
+                    <p>©4Genuis 2023</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
